Update 'rmpueu4uf-java-springboot' component image to: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-java-springboot:5a926bbf7fa2ac6c388a5d6b8b793006cfce244d@sha256:a248edc2249f221adac265d733b8dbacd71c14c802b3817c44c72ef54134d56a

--- a/components/rmpueu4uf-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/rmpueu4uf-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rmpueu4uf-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-java-springboot:5a926bbf7fa2ac6c388a5d6b8b793006cfce244d@sha256:a248edc2249f221adac265d733b8dbacd71c14c802b3817c44c72ef54134d56a
+          name: container-image
